Tue Dec  5 16:26:24 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixes to compile with stlport.

	* Fixes to use the new matches_{{lower,upper}_bound,estimated}
	  interface.

Tue Nov 28 15:07:19 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updated indexer/indexfile.xml to use the omsplitonchars node
	  instead of the omregexsplit node.

Fri Nov 24 16:05:03 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.4.1

Fri Nov 24 13:35:05 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add --remote parameter to msearch.

Thu Nov 23 15:31:08 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Chris is slightly sleepy, so I changed indexfile back from using
	  sleepycat to quartz.

Thu Nov 23 15:16:05 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* For some reason indexfile.cc was broken.

Thu Nov 23 12:44:01 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Append to string, rather than replace it.  Tiny change to
	  omindex, big speedup with large files.

Thu Nov 23 11:55:27 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove dependency on index_utils.h, which has been removed.

Wed Nov 22 16:05:01 GMT 2000 Olly Betts

	* Corrected a comment.

Wed Nov 22 13:07:59 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change examples to use quartz rather than sleepycat.

Fri Nov 17 16:38:57 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.4.0

Fri Nov 17 16:28:06 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix build system of indexergui so that it can build with an
	  uninstalled library.

Tue Nov 14 19:32:46 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The indexer GUI can load graphs from XML files and display them
	  in a partly sensible manner.  Nodes can be dragged around.
