@@ -1,3 +1,7 @@
+Sun Dec 10 17:04:14 GMT 2000 Olly Betts
+
+	* OmESetItem -> OmESetIterator.
+
 Tue Dec  5 16:26:24 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Fixes to compile with stlport.
